# wini-template

./: .env  Cargo.toml  README.md  build.rs  bun.lockb  flake.nix  justfile  package.json  packages-files.toml  rustfmt.toml  wini.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/macros/wini/: args.rs  mod.rs  page.rs  wrapper.rs
macros/src/utils/wini/: files.rs
scripts/: README.md  ask-path-packages.sh  run.sh  sync-packages.sh
scripts/templates/component/: mod.rs
scripts/templates/layout/: mod.rs
src/: main.rs  server.rs
src/layout/header/: mod.rs
src/pages/hello/: mod.rs  script.ts  style.scss
src/shared/: mixins.scss
src/shared/wini/: components_files.rs  config.rs  dependencies.rs  err.rs  mod.rs  packages_files.rs  tsconfig.rs
src/template/: mod.rs
src/utils/wini/: buffer.rs  file.rs  handling_file.rs  path.rs
tests/wini/: canonicalize_relative_path.rs
