# <https://doc.rust-lang.org/cargo/index.html>
[package]
name = "PROJECT_NAME_TO_RESOLVE"
version = "0.1.0"
edition = "2021"


[build-dependencies]
walkdir = "2.5.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
colog = "1.3"
ctor = "0.3"
dotenvy = "0.15"
hyper = "1"
http-body-util = "0.1"
itertools = "0.14"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tower-http = { version = "0.6", features = [
    "compression-gzip",
    "compression-br",
    "fs",
]}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
walkdir = "2.5"
wini-maud = { version = "0.26.5", features = ["axum"]}
wini-macros = { path = "./macros/"}

[package.metadata.cargo-machete]
ignored = [
    # Used with the procedural macro #[cache]
    "itertools",
    "wini-maud",
    # Used with the procedural macro #[cache]
    "ctor"
]
